ID as category label visualize

--- a/person_counter_evaluate.ipynb
+++ b/person_counter_evaluate.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,23 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -69,10 +60,7 @@
     "\n",
     "# This is needed since the notebook is stored in the object_detection folder.\n",
     "sys.path.append(\"..\")\n",
-    "from object_detection.utils import ops as utils_ops\n",
-    "\n",
-    "if tf.__version__ < '1.4.0':\n",
-    "  raise ImportError('Please upgrade your tensorflow installation to v1.4.* or later!')\n"
+    "from object_detection.utils import ops as utils_ops"
    ]
   },
   {
@@ -88,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -114,79 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "../obj_det/utils/visualization_utils.py:25: UserWarning: \n",
-      "This call to matplotlib.use() has no effect because the backend has already\n",
-      "been chosen; matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
-      "or matplotlib.backends is imported for the first time.\n",
-      "\n",
-      "The backend was *originally* set to 'module://ipykernel.pylab.backend_inline' by the following code:\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/runpy.py\", line 174, in _run_module_as_main\n",
-      "    \"__main__\", fname, loader, pkg_name)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/runpy.py\", line 72, in _run_code\n",
-      "    exec code in run_globals\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel_launcher.py\", line 16, in <module>\n",
-      "    app.launch_new_instance()\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/traitlets/config/application.py\", line 658, in launch_instance\n",
-      "    app.start()\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelapp.py\", line 486, in start\n",
-      "    self.io_loop.start()\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/ioloop.py\", line 1008, in start\n",
-      "    self._run_callback(self._callbacks.popleft())\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/ioloop.py\", line 759, in _run_callback\n",
-      "    ret = callback()\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/stack_context.py\", line 276, in null_wrapper\n",
-      "    return fn(*args, **kwargs)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 536, in <lambda>\n",
-      "    self.io_loop.add_callback(lambda : self._handle_events(self.socket, 0))\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 450, in _handle_events\n",
-      "    self._handle_recv()\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 480, in _handle_recv\n",
-      "    self._run_callback(callback, msg)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/zmq/eventloop/zmqstream.py\", line 432, in _run_callback\n",
-      "    callback(*args, **kwargs)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/tornado/stack_context.py\", line 276, in null_wrapper\n",
-      "    return fn(*args, **kwargs)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 283, in dispatcher\n",
-      "    return self.dispatch_shell(stream, msg)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 233, in dispatch_shell\n",
-      "    handler(stream, idents, msg)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/kernelbase.py\", line 399, in execute_request\n",
-      "    user_expressions, allow_stdin)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/ipkernel.py\", line 208, in do_execute\n",
-      "    res = shell.run_cell(code, store_history=store_history, silent=silent)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/zmqshell.py\", line 537, in run_cell\n",
-      "    return super(ZMQInteractiveShell, self).run_cell(*args, **kwargs)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/interactiveshell.py\", line 2724, in run_cell\n",
-      "    self.events.trigger('post_run_cell')\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/events.py\", line 74, in trigger\n",
-      "    func(*args, **kwargs)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/ipykernel/pylab/backend_inline.py\", line 160, in configure_once\n",
-      "    activate_matplotlib(backend)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/IPython/core/pylabtools.py\", line 315, in activate_matplotlib\n",
-      "    matplotlib.pyplot.switch_backend(backend)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/matplotlib/pyplot.py\", line 231, in switch_backend\n",
-      "    matplotlib.use(newbackend, warn=False, force=True)\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/matplotlib/__init__.py\", line 1410, in use\n",
-      "    reload(sys.modules['matplotlib.backends'])\n",
-      "  File \"/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/matplotlib/backends/__init__.py\", line 16, in <module>\n",
-      "    line for line in traceback.format_stack()\n",
-      "\n",
-      "\n",
-      "  import matplotlib; matplotlib.use('Agg')  # pylint: disable=multiple-statements\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#from pc_utils import pc_PerImageEvaluation\n",
     "import pc_utils\n",
@@ -221,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -264,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -274,25 +196,15 @@
    "source": [
     "label_map = label_map_util.load_labelmap(PATH_TO_LABELS)\n",
     "categories = label_map_util.convert_label_map_to_categories(label_map, max_num_classes=NUM_CLASSES, use_display_name=True)\n",
-    "category_index = label_map_util.create_category_index(categories)"
+    "category_index = label_map_util.create_category_index(categories)\n",
+    "pc_label = {} # For label marking"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': 1, 'name': u'person'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "category_index[1]"
    ]
@@ -310,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -326,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -407,14 +319,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# image_np : np array of the image\n",
     "# prediction : prediction dictionary for the image\n",
     "# groundtruth : groundtruth dictionary for the image\n",
-    "def visualize_image(image_np, prediction=None, groundtruth=None):\n",
+    "def visualize_image(image_np, prediction=None, groundtruth=None, isIDMode=False):\n",
+    "    if isIDMode and prediction != None:\n",
+    "        # Plot the prediction\n",
+    "        vis_util.visualize_boxes_and_labels_on_image_array(\n",
+    "          image_np,\n",
+    "          prediction['detection_boxes'],\n",
+    "          prediction['person_id'], #prediction['detection_classes'],\n",
+    "          prediction['detection_scores'],\n",
+    "          pc_label, #category_index,\n",
+    "          instance_masks=prediction.get('detection_masks'),\n",
+    "          use_normalized_coordinates=False,\n",
+    "          min_score_thresh=0.30,\n",
+    "          line_thickness=8)\n",
+    "        return\n",
+    "        \n",
     "    if prediction != None:\n",
     "        # Plot the prediction\n",
     "        vis_util.visualize_boxes_and_labels_on_image_array(\n",
@@ -442,13 +368,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# image_path : file name with extension E.g: 00010.jpg\n",
     "# prediction : prediction dictionary of the image\n",
-    "def drawBB(image_path, prediction):\n",
+    "def drawBB(image_path, prediction, isIDMode=False):\n",
     "    # Visualization of the results of a detection.\n",
     "    original_image_path = os.path.join(PATH_TO_IMAGES_DIR, image_path)   \n",
     "    marked_image_path = os.path.join(PATH_TO_PREDICTION_DIR, 'Image')\n",
@@ -457,8 +383,8 @@
     "    image = Image.open(original_image_path)\n",
     "    image_np = load_image_into_numpy_array(image)\n",
     "    # Update the image with predicted and groundtruth BB\n",
-    "    visualize_image(image_np, groundtruth=prediction)\n",
-    "    # visualize_image(image_np, prediction=prediction)    \n",
+    "    #visualize_image(image_np, groundtruth=prediction)\n",
+    "    visualize_image(image_np, prediction=prediction, isIDMode=isIDMode)    \n",
     "    im = Image.fromarray(image_np)\n",
     "    IMAGE_FILE = os.path.join(marked_image_path)\n",
     "    #print \"Save file in\" + IMAGE_FILE\n",
@@ -474,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,13 +547,15 @@
     "        if dt['person_id'][i] == -1:\n",
     "            global PERSON_COUNTER\n",
     "            PERSON_COUNTER += 1\n",
+    "            global pc_label\n",
+    "            pc_label[PERSON_COUNTER] = { 'id': PERSON_COUNTER, 'name' : 'PC'+ str(PERSON_COUNTER) }\n",
     "            dt['person_id'][i] = PERSON_COUNTER\n",
     "    return dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,6 +573,7 @@
     "# dt = {}\n",
     "# dt['detection_boxes'] = detected_boxes\n",
     "# dt['detection_scores'] = detected_scores\n",
+    "# dt['detection_classes'] = np.array([1,0,1])\n",
     "\n",
     "# groundtruth_boxes = np.array([[0, 0, 1, 1], [0, 0, 10, 10]], dtype=float)\n",
     "# gt = {}\n",
@@ -658,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +613,11 @@
     "    global PERSON_COUNTER\n",
     "    PERSON_COUNTER = 0\n",
     "    gt['person_id'] = np.array([i+1 for i in range(gt['num_detections'])])\n",
-    "\n",
+    "    \n",
+    "    for i in range(gt['num_detections']):\n",
+    "        global pc_label\n",
+    "        pc_label[i] = { 'id': i, 'name' : 'PC'+ str(i)}\n",
+    "    \n",
     "    image_id = str(i+1).zfill(6)\n",
     "    dt = ev_data[image_id] # treated as dt\n",
     "\n",
@@ -745,15 +678,15 @@
     "    with open(PREDICTION_PKL_FILE,'rb') as fd:\n",
     "        ev_data = pickle.load(fd)\n",
     "        # Need to sequentially analyse\n",
-    "        for i in range(1,655):\n",
+    "        for i in range(1,655): # 655\n",
     "            # File name without extension\n",
     "            image_id = str(i).zfill(6)\n",
     "            prediction = ev_data[image_id]\n",
     "            # Person class = 1 in COCO dataset\n",
-    "            idx = prediction['detection_classes'][prediction['detection_classes'] == 1]\n",
+    "            idx = prediction['detection_classes'] == 1\n",
     "            prediction['num_detections'] = np.count_nonzero(idx)\n",
-    "            prediction['detection_boxes'] = prediction['detection_boxes'][idx]\n",
-    "            prediction['detection_scores'] = prediction['detection_boxes'][idx]\n",
+    "            prediction['detection_boxes'] = prediction['detection_boxes'][idx, :]\n",
+    "            prediction['detection_scores'] = prediction['detection_scores'][idx]\n",
     "            prediction['detection_classes'] = prediction['detection_classes'][idx]\n",
     "            print \"Image\", image_id, \"dt\", prediction['num_detections']\n",
     "        # Store in pickle\n",
@@ -769,17 +702,26 @@
    "source": [
     "# Evaluate the prediction\n",
     "def evaluate():\n",
-    "    print(PREDICTION_PKL_FILE)\n",
-    "    with open(PREDICTION_PKL_FILE,'rb') as fd:\n",
+    "    print(FILTERED_PKL_FILE)\n",
+    "    with open(FILTERED_PKL_FILE,'rb') as fd:\n",
     "        ev_data = pickle.load(fd)\n",
     "        # Need to sequentially analyse\n",
-    "#         for i in range(1,655):\n",
-    "#             # File name without extension\n",
-    "#             image_id = str(i).zfill(6)\n",
-    "#             prediction = ev_data[image_id]\n",
+    "        for i in range(1,5): #655\n",
+    "            # File name without extension\n",
+    "            image_id = str(i).zfill(6)\n",
+    "            prediction = ev_data[image_id]\n",
+    "            #print \"Image\", i\n",
+    "            #print prediction['detection_boxes']\n",
     "            # Plot the BB on image\n",
-    "            # drawBB(image_path, prediction)\n",
-    "    return ev_data"
+    "            \n",
+    "            # Give dummy person id\n",
+    "            global pc_label\n",
+    "            for i in range(prediction['num_detections']):\n",
+    "                pc_label[i] = { 'id': i, 'name' : 'PC'+ str(i) }\n",
+    "            prediction['person_id'] = np.array([i+1 for i in range(prediction['num_detections'])])\n",
+    "            \n",
+    "            image_path = image_id + '.jpg'\n",
+    "            drawBB(image_path, prediction, isIDMode=True)"
    ]
   },
   {
@@ -791,6 +733,7 @@
     "def main():\n",
     "    #filter_prediction()\n",
     "    #ev_data = evaluate()\n",
+    "    evaluate()\n",
     "    print \"Done\"\n",
     "main()"
    ]
