Save result to csv

--- a/person_counter_evaluate.ipynb
+++ b/person_counter_evaluate.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATASET = \"MOT16\"\n",
-    "VIDEO_SEQ = 10 # Range 01 to 14\n",
+    "VIDEO_SEQ_ID = 10 # Range 01 to 14\n",
     "MODEL_ID = 1"
    ]
   },
@@ -43,7 +43,16 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/chrystle/anaconda2/envs/od27/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -278,6 +287,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getImageCount():\n",
+    "    # Read seqinfo.ini to get seqLength=654\n",
+    "    with open(PATH_TO_DATABASE + 'seqinfo.ini','rb') as fd:\n",
+    "        meta = fd.read()\n",
+    "        idx = meta.find('seqLength')\n",
+    "        meta[idx+10:idx+13]\n",
+    "        return int( meta[idx+10:idx+13] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -285,13 +309,16 @@
    },
    "outputs": [],
    "source": [
-    "if VIDEO_SEQ in [2,4,5,9,10,11,13]:\n",
-    "    VIDEO_SEQ = str(VIDEO_SEQ).zfill(2)\n",
+    "if VIDEO_SEQ_ID in [2,4,5,9,10,11,13]:\n",
+    "    VIDEO_SEQ = str(VIDEO_SEQ_ID).zfill(2)\n",
     "    PATH_TO_DATABASE = '../MOT16/train/MOT16-' + VIDEO_SEQ + '/'\n",
     "else:\n",
-    "    VIDEO_SEQ = str(VIDEO_SEQ).zfill(2)\n",
+    "    VIDEO_SEQ = str(VIDEO_SEQ_ID).zfill(2)\n",
     "    PATH_TO_DATABASE = '../MOT16/test/MOT16-' + VIDEO_SEQ + '/'\n",
     "\n",
+    "IMAGE_COUNT = 5 # getImageCount()\n",
+    "\n",
+    "#print IMAGE_COUNT\n",
     "PATH_TO_IMAGES_DIR = PATH_TO_DATABASE + 'img1/'\n",
     "PATH_TO_ANNOTATIONS_DIR = PATH_TO_DATABASE + '/gt/gt.txt'\n",
     "\n",
@@ -299,7 +326,8 @@
     "PATH_TO_PREDICTION_DIR = os.path.join(PATH_TO_OUTPUT_DIR, MODEL_NAME + '_MOT16_' + VIDEO_SEQ) # Output/Model_MOT16_01\n",
     "PREDICTION_PKL_FILE = os.path.join(PATH_TO_PREDICTION_DIR, \"prediction\")\n",
     "FILTERED_PKL_FILE = os.path.join(PATH_TO_PREDICTION_DIR, \"prediction_filtered\") # Filtered to only person class\n",
-    "RESULT_CSV_FILE = os.path.join(PATH_TO_PREDICTION_DIR, \"dt.csv\") # Final result\n",
+    "RESULT_CSV_FILE = os.path.join(PATH_TO_PREDICTION_DIR, \"dt.csv\") # Per frame per object id\n",
+    "SUMMARY_CSV_FILE = os.path.join(PATH_TO_PREDICTION_DIR, \"summary.csv\") # Frame wise summary\n",
     "\n",
     "# Size, in inches, of the output images.\n",
     "IMAGE_SIZE = (12, 8)\n",
@@ -307,7 +335,10 @@
     "# Store results to Output/Model directory\n",
     "if not os.path.exists(PATH_TO_PREDICTION_DIR):\n",
     "    os.makedirs(PATH_TO_PREDICTION_DIR)\n",
-    "    os.makedirs(os.path.join(PATH_TO_PREDICTION_DIR,\"Image\"))"
+    "    os.makedirs(os.path.join(PATH_TO_PREDICTION_DIR,\"Image\"))\n",
+    "\n",
+    "if os.path.exists(RESULT_CSV_FILE):\n",
+    "    os.remove(RESULT_CSV_FILE)"
    ]
   },
   {
@@ -496,23 +527,24 @@
     "def appendMatching(image_id, prediction):    \n",
     "    for i in range(prediction['num_detections']):\n",
     "        row = []\n",
-    "        # Frame number\n",
-    "        row[0] = image_id\n",
     "        # ID\n",
-    "        row[1] = prediction['person_id']\n",
+    "        row.append(prediction['person_id'][i])\n",
     "        # bb_left\n",
-    "        row[2] = prediction['detection_boxes'][i][1]\n",
+    "        row.append(prediction['detection_boxes'][i][1])\n",
     "        # bb_top\n",
-    "        row[3] = prediction['detection_boxes'][i][2]\n",
+    "        row.append(prediction['detection_boxes'][i][2])\n",
     "        # bb_width\n",
-    "        row[4] = prediction['detection_boxes'][i][3] - row[2]\n",
+    "        row.append(prediction['detection_boxes'][i][3] - row[2])\n",
     "        # bb_height\n",
-    "        row[5] = row[3] - prediction['detection_boxes'][i][0]\n",
-    "        row = ''.join(row)\n",
+    "        row.append(row[3] - prediction['detection_boxes'][i][0] )\n",
+    "        row = ','.join(map(str,row))\n",
     "        # conf, x, y, z\n",
-    "        row = row + ',0,0,0,0'\n",
-    "        #with open(RESULT_CSV_FILE,'a') as fd:\n",
-    "        #    fd.write(row)\n",
+    "        # Frame number\n",
+    "        row = image_id + ',' + row + ',0,0,0,0\\n'\n",
+    "        with open(RESULT_CSV_FILE,'a') as fd:\n",
+    "            fd.write(row)\n",
+    "            #writer = csv.writer(fd)\n",
+    "            #writer.writerow(row)\n",
     "        print row"
    ]
   },
@@ -559,30 +591,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# num_groundtruth_classes = 1\n",
-    "# matching_iou_threshold = 0.5\n",
-    "# nms_iou_threshold = 1.0\n",
-    "# nms_max_output_boxes = 10000\n",
+    "def makeGT(image_id, gt, initMode=False):\n",
+    "    if initMode:\n",
+    "        # Initialize the person counter\n",
+    "        global PERSON_COUNTER\n",
+    "        PERSON_COUNTER = 0\n",
+    "        gt['person_id'] = np.array([i+1 for i in range(gt['num_detections'])])\n",
+    "        # fill the pc label map\n",
+    "        for i in range(gt['num_detections']):\n",
+    "            global pc_label\n",
+    "            pc_label[i] = { 'id': i, 'name' : 'PC'+ str(i)}\n",
     "\n",
-    "# # Per image evaluation\n",
-    "# pie = pc_utils.pc_PerImageEvaluation(num_groundtruth_classes, matching_iou_threshold, nms_iou_threshold,nms_max_output_boxes)\n",
-    "\n",
-    "# # Dataset\n",
-    "# detected_boxes = np.array([[0, 0, 1, 1], [0, 0, 2, 2], [0, 0, 3, 3]], dtype=float)\n",
-    "# detected_scores = np.array([0.6, 0.8, 0.5], dtype=float) # Original\n",
-    "# dt = {}\n",
-    "# dt['detection_boxes'] = detected_boxes\n",
-    "# dt['detection_scores'] = detected_scores\n",
-    "# dt['detection_classes'] = np.array([1,0,1])\n",
-    "\n",
-    "# groundtruth_boxes = np.array([[0, 0, 1, 1], [0, 0, 10, 10]], dtype=float)\n",
-    "# gt = {}\n",
-    "# gt['detection_boxes'] = groundtruth_boxes\n",
-    "# gt['person_id'] = np.array([1,2,3])\n",
-    "# PERSON_COUNTER = 3\n",
-    "\n",
-    "# #pc_utils.matchOnIoU(pie, dt, gt)\n",
-    "# #twoFrameMatching(pie, dt, gt)"
+    "    appendMatching(image_id, gt)\n",
+    "    # Save first image\n",
+    "    image_path = image_id + '.jpg'\n",
+    "    drawBB(image_path, gt, isIDMode=True)\n",
+    "    \n",
+    "    return gt"
    ]
   },
   {
@@ -605,58 +630,24 @@
     "    pie = pc_utils.pc_PerImageEvaluation(num_groundtruth_classes, matching_iou_threshold, nms_iou_threshold,nms_max_output_boxes)\n",
     "\n",
     "    # First frame\n",
-    "    i = 1\n",
-    "    image_id = str(i).zfill(6)\n",
+    "    frame_id = 1\n",
+    "    image_id = str(frame_id).zfill(6)\n",
     "    gt = ev_data[image_id] # treated as gt\n",
-    "\n",
-    "    # Initialize the person counter\n",
-    "    global PERSON_COUNTER\n",
-    "    PERSON_COUNTER = 0\n",
-    "    gt['person_id'] = np.array([i+1 for i in range(gt['num_detections'])])\n",
-    "    \n",
-    "    for i in range(gt['num_detections']):\n",
-    "        global pc_label\n",
-    "        pc_label[i] = { 'id': i, 'name' : 'PC'+ str(i)}\n",
-    "    \n",
-    "    image_id = str(i+1).zfill(6)\n",
+    "    gt = makeGT(image_id, gt, initMode=True)\n",
+    "   \n",
+    "    # Next frame\n",
+    "    image_id = str(frame_id+1).zfill(6)\n",
     "    dt = ev_data[image_id] # treated as dt\n",
     "\n",
-    "    while i < 5: # Upto last but one    \n",
+    "    for frame_id in range(1,IMAGE_COUNT-1): # Upto last but one\n",
     "        # Returns gt for next\n",
     "        gt = twoFrameMatching(pie, dt, gt)\n",
+    "        gt = makeGT(image_id, gt, initMode=False)\n",
+    "        \n",
     "        # Prepare next loop\n",
-    "        i = i + 1\n",
-    "        image_id = str(i+1).zfill(6)\n",
-    "        dt = ev_data[image_id]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from object_detection.utils import np_box_list\n",
-    "# from object_detection.utils import np_box_list_ops\n",
-    "\n",
-    "# detected_boxlist = np_box_list.BoxList(detected_boxes)\n",
-    "# print detected_boxlist\n",
-    "# detected_boxlist.add_field('scores', detected_scores)\n",
-    "\n",
-    "# print detected_boxlist.get()\n",
-    "# print detected_scores\n",
-    "# detected_boxlist = np_box_list_ops.non_max_suppression(detected_boxlist, pie.nms_max_output_boxes, pie.nms_iou_threshold)\n",
-    "\n",
-    "# print detected_boxlist.get()\n",
-    "# print detected_boxlist.get_field('scores')\n",
-    "\n",
-    "# After sort\n",
-    "# print \"After sort\"\n",
-    "# boxlist = np_box_list_ops.sort_by_field(detected_boxlist, 'scores')\n",
-    "# print boxlist.get()\n",
-    "# scores = boxlist.get_field('scores')\n",
-    "# print scores\n"
+    "        frame_id = frame_id + 1\n",
+    "        image_id = str(frame_id+1).zfill(6)\n",
+    "        dt = ev_data[image_id]\n"
    ]
   },
   {
@@ -678,7 +669,7 @@
     "    with open(PREDICTION_PKL_FILE,'rb') as fd:\n",
     "        ev_data = pickle.load(fd)\n",
     "        # Need to sequentially analyse\n",
-    "        for i in range(1,655): # 655\n",
+    "        for i in range(1,IMAGE_COUNT): # 655\n",
     "            # File name without extension\n",
     "            image_id = str(i).zfill(6)\n",
     "            prediction = ev_data[image_id]\n",
@@ -702,26 +693,10 @@
    "source": [
     "# Evaluate the prediction\n",
     "def evaluate():\n",
-    "    print(FILTERED_PKL_FILE)\n",
-    "    with open(FILTERED_PKL_FILE,'rb') as fd:\n",
-    "        ev_data = pickle.load(fd)\n",
-    "        # Need to sequentially analyse\n",
-    "        for i in range(1,5): #655\n",
-    "            # File name without extension\n",
-    "            image_id = str(i).zfill(6)\n",
-    "            prediction = ev_data[image_id]\n",
-    "            #print \"Image\", i\n",
-    "            #print prediction['detection_boxes']\n",
-    "            # Plot the BB on image\n",
-    "            \n",
-    "            # Give dummy person id\n",
-    "            global pc_label\n",
-    "            for i in range(prediction['num_detections']):\n",
-    "                pc_label[i] = { 'id': i, 'name' : 'PC'+ str(i) }\n",
-    "            prediction['person_id'] = np.array([i+1 for i in range(prediction['num_detections'])])\n",
-    "            \n",
-    "            image_path = image_id + '.jpg'\n",
-    "            drawBB(image_path, prediction, isIDMode=True)"
+    "    print(RESULT_CSV_FILE)\n",
+    "    with open(RESULT_CSV_FILE,'rb') as fd:\n",
+    "        res = fd.read()\n",
+    "        "
    ]
   },
   {
@@ -732,8 +707,9 @@
    "source": [
     "def main():\n",
     "    #filter_prediction()\n",
-    "    #ev_data = evaluate()\n",
-    "    evaluate()\n",
+    "    assignID()\n",
+    "    #evaluate()\n",
+    "    print \"Total person\", PERSON_COUNTER\n",
     "    print \"Done\"\n",
     "main()"
    ]
